tests/baselines/reference/memberScope.errors.txt
memberScope.ts(4,11): error TS2708: Cannot use namespace 'Basil' as a value.


==== memberScope.ts (1 errors) ====
    namespace Salt {
      export class Pepper {}
      export namespace Basil { }
      var z = Basil.Pepper;
              ~~~~~
!!! error TS2708: Cannot use namespace 'Basil' as a value.
    }
    
    